--- a/yt_transcription/home/templates/index.html
+++ b/yt_transcription/home/templates/index.html
@@ -10,9 +10,10 @@
       type="image/png"
       href="{% static 'admin/img/favicon.png' %}"
     />
-
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
-    rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
         margin: 0;
