--- a/yt_transcription/home/templates/index.html
+++ b/yt_transcription/home/templates/index.html
@@ -5,11 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YouTube Video Transcriptions</title>
-    <link
-      rel="icon"
-      type="image/png"
-      href="{% static 'admin/img/favicon.png' %}"
-    />
+    <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
       rel="stylesheet"
